--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ chrono = "0.4.38"
 dashmap = "6.0.1"
 rand = { version = "0.8.5", features = [] }
 serde = { version = "1.0.204", features = ["derive"] }
-uuid = { version = "1.10.0", features = ["v4"] }
+uuid = { version = "1.10.0", features = ["v4", "serde"] }
+warp = "0.3.7"
