--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = "0.4.38"
+chrono = { version = "0.4.38", features = ["serde"] }
 dashmap = "6.0.1"
 rand = { version = "0.8.5", features = [] }
 serde = { version = "1.0.204", features = ["derive"] }
